# PitchGraph

./: AGENTS.md  AnalysisSession.cpp  AnalysisSession.h  AudioCapture.cpp  AudioCapture.h  AudioCaptureFactory.cpp  AudioCaptureFactory.h  BatchExportRunner.cpp  BatchExportRunner.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  OfflineWavReader.cpp  OfflineWavReader.h  PitchDetector.cpp  PitchDetector.h  PitchGraphWidget.cpp  PitchGraphWidget.h  PulseAudioCapture.cpp  PulseAudioCapture.h  README.md  WINDOWS_BUILD_PLAN.md  WasapiAudioCapture.cpp  WasapiAudioCapture.h  main.cpp
